# sing-box-subscribe

./: .gitignore  README.md  main.py  providers.json  pyproject.toml
api/: app.py
config_template/: README.md  config_template_1.12.json  config_template_groups_rule_set_fakeip_custom.json  config_template_groups_rule_set_tun.json  config_template_groups_rule_set_tun_fakeip.json  config_template_groups_rule_set_tun_fakeip_custom.json  config_template_no_groups_tun_VN.json  config_template_no_tun_ai.json  config_template_notun_ai.json  config_template_notun_ai_global.json  config_template_tun_ai.json  config_template_tun_ai_global.json  config_template_universal_ai.json
config_template/01-tun-ai/: ai-universal-no-ts.json  ai-universal.json
config_template/02-notun-ai/: ai-global.json  ai-universal-no-ts.json  ai-universal.json
config_template/03-full-streaming/: streaming-full.json
config_template/04-minimal/: minimal.json
config_template/05-universal-ai/: notun-ai-universal.json  tun-ai-universal.json
docs/: local-providers-usage.md  sing-box-1.12-migration-guide.md
instructions/: README.md
