[project]
name = "sing-box-subscribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chardet>=7.4.0.post2",
    "flask==2.3.2",
    "paramiko>=4.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "ruamel-yaml>=0.19.1",
    "scp>=0.15.0",
]
